--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,20 +1,42 @@
 {% extends 'login.html' %}
 
+{% block title %}Login{% endblock title %}
+
 {% block content %}
-<h1>Login</h1>
-<form method="post">
-    {% csrf_token %}
-    <div class="login-container" >
-        <label for="id_username">Email:</label>
-        <input placeholder="exemplo@exemplo.com" type="text" name="username" id="id_username" required>
-    </div>
-    <div class="login-container" >
-        <label for="id_password">Senha:</label>
-        <input placeholder="******" type="password" name="password" id="id_password" required>
-    </div>
-    <button class="form-submti" type="submit">Entrar</button>
-    <p>
-        Ainda não tem conta? <a href="{% url 'signup' %}">Cadastre-se</a>
-    </p>
-</form>
+    <h1>Login</h1>
+    <form method="post" novalidate>
+        {% csrf_token %}
+        
+        {% if form.errors %}
+            <div class="error">
+                <ul>
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        
+        <!-- Campo de Email -->
+        <div class="form-group">
+            <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+            {{ form.username }}
+        </div>
+        
+        <!-- Campo de Senha -->
+        <div class="form-group">
+            <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
+            {{ form.password }}
+        </div>
+        
+        <button class="form-submit" type="submit">Entrar</button>
+        <p>
+            Ainda não tem conta? <a href="{% url 'signup' %}">Cadastre-se</a>
+        </p>
+    </form>
 {% endblock content %}
