--- a/boddys_project/templates/login.html
+++ b/boddys_project/templates/login.html
@@ -35,7 +35,9 @@
           width: 100%;
           text-align: center;
       }
-      
+      #createGroup {
+        color: #white !important;
+      }
       /* Estilização dos títulos */
       h1 {
           margin-bottom: 1.5rem;
