--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,6 +4,9 @@
 <h1>Bem-vindo ao Boddys</h1>
 {% if user.is_authenticated %}
 <p>Olá, {{ user.nome }}! Você está autenticado.</p>
+<div>
+  <a href="{% url 'listar_grupos' %}" class="button">Meus Grupos</a>
+</div>
 <form action="{% url 'logout' %}" method="post">
   {% csrf_token %}
   <button type="submit">Sair</button>
