feat: add lisdt groups

--- a/boddys_project/templates/login.html
+++ b/boddys_project/templates/login.html
@@ -51,6 +51,14 @@
           font-size: 1rem;
           color: #555555;
       }
+
+      li {
+          margin-bottom: 1.5rem;
+          font-size: 1rem;
+          color: #555555;
+          decoration: none;
+          list-style-type: none;
+      }
       
       /* Links */
       a {
