--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,4 +1,4 @@
-{% extends 'login.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <h1>Bem-vindo ao Boddys</h1>
@@ -11,11 +11,5 @@
   {% csrf_token %}
   <button type="submit">Sair</button>
 </form>
-{% else %}
-<p>Você não está logado.</p>
-<p>
-  <a href="{% url 'signup' %}" class="button">Cadastrar</a>
-  <a href="{% url 'login' %}" class="button">Login</a>
-</p>
 {% endif %}
 {% endblock content %}
