fix: some errors

--- a/boddys_project/templates/login.html
+++ b/boddys_project/templates/login.html
@@ -11,7 +11,9 @@
           margin: 0;
           padding: 0;
       }
-      
+      .error {
+        color: red
+      }
       /* Estilização do corpo da página */
       body {
           font-family: Arial, sans-serif;
