--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,17 +8,17 @@
         {% csrf_token %}
         
         {% if form.errors %}
-            <div class="error">
-                <ul>
-                    {% for field in form %}
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    {% endfor %}
-                    {% for error in form.non_field_errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+            <div>
+          <ul>
+              {% for field in form %}
+            {% for error in field.errors %}
+                <li class="error">{{ error }}</li>
+            {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
+            <li class="error">{{ error }}</li>
+              {% endfor %}
+          </ul>
             </div>
         {% endif %}
         
