--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -8,15 +8,15 @@
         {% csrf_token %}
         
         {% if form.errors %}
-            <div class="error">
+            <div>
                 <ul>
                     {% for field in form %}
                         {% for error in field.errors %}
-                            <li>{{ error }}</li>
+                            <li class="error">{{ error }}</li>
                         {% endfor %}
                     {% endfor %}
                     {% for error in form.non_field_errors %}
-                        <li>{{ error }}</li>
+                        <li class="error">{{ error }}</li>
                     {% endfor %}
                 </ul>
             </div>
