feat: join grop

--- a/groups/templates/groups/listar_grupos.html
+++ b/groups/templates/groups/listar_grupos.html
@@ -10,4 +10,5 @@
     {% endfor %}
 </ul>
 <a class="button"  href="{% url 'criar_grupo' %}">Criar novo grupo</a>
+<a class="button"  href="{% url 'join_grupo' %}">Entrar em novo grupo</a>
 {% endblock content %}
