feat: new workouts

--- a/boddys_project/templates/base.html
+++ b/boddys_project/templates/base.html
@@ -294,7 +294,7 @@
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'listar_grupos' %}">Grupos</a></li>
-            {% comment %} <li><a href="{% url 'exercicios' %}">Exercícios</a></li> {% endcomment %}
+            <li><a href="{% url 'listar_treinos' %}">Exercícios</a></li>
         </ul>
     </nav>
     <div class="container">
