--- a/boddys_project/templates/base.html
+++ b/boddys_project/templates/base.html
@@ -295,6 +295,7 @@
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'listar_grupos' %}">Grupos</a></li>
             <li><a href="{% url 'listar_treinos' %}">Exercícios</a></li>
+            <li><a href="{% url 'criar_post' %}">Criar post</a></li>
         </ul>
     </nav>
     <div class="container">
